[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upbit-mcp"
version = "2.1.0"
description = "업비트 개발자 센터 API 문서 검색 MCP 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "httpx",
]

[project.scripts]
upbit-mcp = "upbit_mcp.main:main"
